--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,8 +6,10 @@
             "request": "launch",
             "program": "${workspaceFolder}/build/XRT/XRT.exe",
             "args": [
-                "\"${workspaceFolder}/XRT/Dev/*.xrt\"",
-                "\"${workspaceFolder}/XRT/src/libXRT/*.xrt\"",
+                "\"${workspaceFolder}/XRT/Dev/PulseGenerator.xrt\"",
+                // "\"${workspaceFolder}/XRT/Dev/*.xrt\"",
+                // "\"${workspaceFolder}/XRT/src/libXRT/*.xrt\"",
+                // "\"${workspaceFolder}/XRT/src/libXRT/std.is_integral.xrt\"",
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
