--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,19 @@
 {
     "C_Cpp.intelliSenseEngine": "disabled",
     "clangd.arguments": [
-        "-j=8",
+        "--pretty",
+        "--all-scopes-completion",
+        "--completion-style=detailed",
+        "--header-insertion=iwyu",
+        "--header-insertion-decorators",
         "--background-index",
-        "--pch-storage=memory"
+        "--clang-tidy",
+        "--clang-tidy-checks=cppcoreguidelines-*,performance-*,bugprone-*,portability-*,modernize-*,google-*",
+        "--fallback-style=Google",
+        "-j=8",
+        "--pch-storage=memory",
+        "--function-arg-placeholders",
+        "--compile-commands-dir=build"
     ],
     "files.associations": {
         "*.ui": "xml",
