--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,15 +6,15 @@
             "request": "launch",
             "program": "${workspaceFolder}/build/XRT/XRT.exe",
             "args": [
-                "\"${workspaceFolder}/XRT/Dev/PulseGenerator.xrt\"",
-                // "\"${workspaceFolder}/XRT/Dev/*.xrt\"",
-                // "\"${workspaceFolder}/XRT/src/libXRT/*.xrt\"",
-                // "\"${workspaceFolder}/XRT/src/libXRT/std.is_integral.xrt\"",
+                "\"${workspaceFolder}/XRT/Dev/PulseGenerator.xdl\"",
+                // "\"${workspaceFolder}/XRT/Dev/*.xdl\"",
+                // "\"${workspaceFolder}/XRT/src/libXRT/*.xdl\"",
+                // "\"${workspaceFolder}/XRT/src/libXRT/std.is_integral.xdl\"",
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "console": "externalTerminal",
+            "console": "integratedTerminal",
             "visualizerFile": "c:\\Users\\CFXS\\AppData\\Roaming\\Code\\User\\workspaceStorage\\6812e7b5e42f5b13eeeb9f04f80fcc0e\\tonka3000.qtvsctools\\qt.natvis.xml"
         },
         {
@@ -23,10 +23,10 @@
             "request": "launch",
             "program": "${workspaceFolder}/build/XRT/XRT",
             "args": [
-                "\"${workspaceFolder}/XRT/Dev/*.xrt\"",
-                // "\"${workspaceFolder}/XRT/Dev/*.xrt\"",
-                // "\"${workspaceFolder}/XRT/src/libXRT/*.xrt\"",
-                // "\"${workspaceFolder}/XRT/src/libXRT/std.is_integral.xrt\"",
+                "\"${workspaceFolder}/XRT/Dev/*.xdl\"",
+                // "\"${workspaceFolder}/XRT/Dev/*.xdl\"",
+                // "\"${workspaceFolder}/XRT/src/libXRT/*.xdl\"",
+                // "\"${workspaceFolder}/XRT/src/libXRT/std.is_integral.xdl\"",
             ],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
