--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,5 +101,29 @@
         "codecvt": "cpp",
         "any": "cpp",
         "numeric": "cpp"
-    }
+    },
+    "editor.tokenColorCustomizations": {
+        "textMateRules": [
+            {
+                "scope" : "markup.other.log.error",
+                "settings": { "foreground": "#FF0000" }
+            },
+            {
+                "scope" : "markup.other.log.warn",
+                "settings": { "foreground": "#ff9d00" }
+            },
+            {
+                "scope" : "markup.other.log.info",
+                "settings": { "foreground": "#2cd3c5" }
+            },
+            {
+                "scope" : "markup.other.log.debug",
+                "settings": { "foreground": "#888585" }
+            },
+            {
+                "scope" : "markup.other.log.highlight",
+                "settings": { "foreground": "#19ff04" }
+            }
+        ]
+        }
 }
